k8s/orderlist-deployment.yaml
apiVersion: v1
kind: Service
metadata:
  name: orderlist-cluster-ip-service
spec:
  type: ClusterIP
  selector:
    component: web
  ports:
    - port: 5002
      targetPort: 5002

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: orderlist-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      component: orderlist
  template:
    metadata:
      labels:
        component: orderlist
    spec:
      containers:
        - name: orderlist
          image: leonardovieira/orderlist-web
          ports:
            - containerPort: 5002
