k8s/ordermanagement-deployment.yaml
apiVersion: v1
kind: Service
metadata:
  name: ordermanagement-cluster-ip-service
spec:
  type: ClusterIP
  selector:
    component: ordermanagement
  ports:
    - port: 6002
      targetPort: 80

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: ordermanagement-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      component: ordermanagement
  template:
    metadata:
      labels:
        component: ordermanagement
    spec:
      containers:
        - name: ordermanagement
          image: leonardovieira/ordermanagement-web
          ports:
            - containerPort: 80
