k8s/ordermanagement-repo-deployment.yaml
apiVersion: v1
kind: Service
metadata:
  name: ordermanagement-repo-cluster-ip-service
spec:
  type: ClusterIP
  selector:
    component: ordermanagement-repo
  ports:
    - port: 27018
      targetPort: 27017

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: ordermanagement-repo-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      component: ordermanagement-repo
  template:
    metadata:
      labels:
        component: ordermanagement-repo
    spec:
      containers:
        - name: ordermanagement-repo
          image: mongo
          ports:
            - containerPort: 27017
