k8s/product-inventory-deployment.yaml
apiVersion: v1
kind: Service
metadata:
  name: product-inventory-cluster-ip-service
spec:
  type: ClusterIP
  selector:
    component: product-inventory
  ports:
    - port: 6003
      targetPort: 80

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: product-inventory-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      component: product-inventory
  template:
    metadata:
      labels:
        component: product-inventory
    spec:
      containers:
        - name: product-inventory
          image: leonardovieira/productinventory-web
          ports:
            - containerPort: 80
