k8s/product-inventory-repo-deployment.yaml
apiVersion: v1
kind: Service
metadata:
  name: product-inventory-repo-cluster-ip-service
spec:
  type: ClusterIP
  selector:
    component: product-inventory-repo
  ports:
    - port: 27019
      targetPort: 27017

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: product-inventory-repo-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      component: product-inventory-repo
  template:
    metadata:
      labels:
        component: product-inventory-repo
    spec:
      containers:
        - name: product-inventory-repo
          image: mongo
          ports:
            - containerPort: 27017
