k8s/ingress-service.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: ingress-service
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /
#    certmanager.k8s.io/cluster-issuer: 'letsencrypt-prod'
#    nginx.ingress.kubernetes.io/ssl-redirect: 'false'
spec:
#  tls:
#    - hosts:
#        - k8s-multi.com
#        - www.k8s-multi.com
#      secretName: k8s-multi-com
  rules:    
    - http:
        paths:
          - path: /orderList/?(.*)
            backend:
              serviceName: orderlist-cluster-ip-service
              servicePort: 5002
#          - path: /api/?(.*)
#            backend:
#              serviceName: server-cluster-ip-service
#              servicePort: 5000
